--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,19 @@ Jinja2==3.1.6
 MarkupSafe==3.0.2
 mpmath==1.3.0
 networkx==3.4.2
-numpy==2.2.6
-pillow==11.2.1
+numpy>=1.21.0
+pillow>=8.0.0
 setuptools==80.8.0
 sympy==1.14.0
-torch==2.7.0
-torchvision==0.22.0
+torch>=1.9.0
+torchvision>=0.10.0
 typing_extensions==4.13.2
+opencv-python>=4.5.0
+tqdm>=4.62.0
+scikit-learn>=0.24.0
+albumentations>=1.0.0
+imageio>=2.9.0
+streamlit>=1.24.0
+pandas>=1.3.0
+matplotlib>=3.4.0
+gdown>=4.6.0
